# openfang

./: .env.example  .gitignore  .mcp.json  .sentryclirc  AGENTS.md  CLAUDE.md  Cargo.toml  LINT_JOURNAL.md  README.md  SENTRY_INTEGRATION.md  WORKFLOW.md  WORKTREE_SETUP.md  docker-compose.monitoring.yml  merge-and-verify.sh  openfang.toml.example  setup-worktrees.sh  verify-last-build.sh
.github/workflows/: ci-fanout.yml  ci.yml  claude-remediation-agent.yml  harness-weekly-metrics.yml  invariant-nightly.yml  pr-review-harness.yml  release.yml  risk-policy-gate.yml  sentry-remediation-agent.yml  sentry-telemetry-verify.yml  tla-invariants.yml
.harness/: acceptance.criteria.json  policy.contract.json
.harness/evals/: novel-failure-signatures.json  scenarios.blocking.json  scenarios.generated.json  scenarios.nightly.json
.harness/schemas/: agent-eval-findings.schema.json  (+5 more)
agents/coder/: agent.toml
artifacts/: browser-evidence-manifest.json  sentry-findings.json  sentry-logs-validation-live.json  sentry-logs-validation.json
config/: unattended_workloads.toml
contracts/: 01-kill-panics.md  02-a2a-typed-errors.md  03-fix-tool-calls-bug.md  04-wasm-module-cache.md  05-api-rate-limiting.md  06-endpoint-rbac.md  07-budget-alerts.md  08-python-sandbox-hardening.md  09-a2a-dashboard-tab.md  10-a2a-persistent-tasks.md  11-configurable-llm-concurrency.md  12-sqlite-connection-pool.md  13-event-bus-backpressure.md  14-provider-rate-limiting.md  15-agent-circuit-breaker.md  16-wire-model-orchestrator.md  17-safe-config-mutation.md  18-safe-env-var-ops.md  19-shared-http-client.md
crates/openfang-channels/: Cargo.toml
crates/openfang-channels/src/: bridge.rs  telegram.rs
crates/openfang-experiments/: Cargo.toml
crates/openfang-experiments/examples/: experiment.toml
crates/openfang-experiments/src/: config.rs  lib.rs  main.rs  mock.rs  mutation.rs  results.rs  runner.rs  scoring.rs
crates/openfang-telegram/: Cargo.toml
crates/openfang-telegram/src/: lib.rs
docs/: api-reference.md  configuration.md  data-spine.md  desktop.md  google-home-bridge.md  harness-engineering.md  harness-maturity-assessment.md  operations-codex-continuity.md  rust-test-harness.md  symphony-setup.md
monitoring/: README.md  openfang-monitoring.toml
scripts/: autonomous_loop.py  check_invariants.sh  codex_live_state.sh  desktop_control.py  google_home_bridge.py  install_autonomous_loop_launchd.sh  install_autonomous_loop_systemd.sh  install_vacation_guard_launchd.sh  remote_codex_dual_login.sh  remote_deploy_control_plane.sh  remote_smoke_codex.sh  seed_unattended_workloads.py  sentry_to_codex.sh  test_telegram_integration.sh  upload_sentry_debug_files.sh
xtask/: Cargo.toml
(+2613 files in other folders)
