[package]
name = "openfang-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Bridge Layer — pluggable messaging integrations for OpenFang"

[dependencies]
openfang-types = { path = "../openfang-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
sentry = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
async-imap = "0.11"
async-native-tls = "0.5"
async-std = "1.13"
lettre = "0.11"

[dev-dependencies]
tokio-test = { workspace = true }
