[package]
name = "openfang-experiments"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Autoresearch experiment loop for systematic prompt optimization"

[[bin]]
name = "openfang-experiments"
path = "src/main.rs"

[dependencies]
openfang-types = { path = "../openfang-types" }
openfang-runtime = { path = "../openfang-runtime" }
openfang-memory = { path = "../openfang-memory" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex-lite = { workspace = true }
sentry = "0.34"
sentry-tracing = "0.34"
async-trait = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
